syntax = "proto3";
package api.content.operate;
import "google/protobuf/timestamp.proto";
option go_package = "content-manage/api/content/operate;operate";
option java_multiple_files = true;
option java_package = "api.content.operate";

service App {
  rpc CreateContent (CreateContentReq) returns (CreateContentRsp);
  rpc UpdateContent (UpdateContentReq) returns (UpdateContentRsp);
  rpc DeleteContent (DeleteContentReq) returns (DeleteContentRsp);
  rpc FindContent (FindContentReq) returns (FindContentRsp);

}

message Content {
  // 索引ID
  int64 ID = 1;
  // 内容ID
  string contentID = 2;
  // 内容标题
  string title = 3;
  // 视频播放URL
  string VideoURL = 4;
  // 作者
  string author = 5;
  // 内容描述
  string Description = 6;
  // 封面图URL
  string thumbnail = 7;
  // 内容分类
  string category = 8;
  // 内容时长
  int64 duration = 9;
  // 分辨率 如720p、1080p
  string resolution = 10;
  // 文件大小
  int64 fileSize = 11;
  // 文件格式 如MP4、AVI
  string format = 12;
  //  // 视频质量 1-高清 2-标清
  int32 quality = 13;
  // 审核状态 1-审核中 2-审核通过 3-审核不通过
  int32 approvalStatus = 14;
  // 创建时间
  google.protobuf.Timestamp createdAt = 15;
  // 审核状态 1-审核中 2-审核通过 3-审核不通过
  google.protobuf.Timestamp updatedAt = 16;
}

// 创建
message CreateContentReq {
  Content content = 1;
}

message CreateContentRsp {
  int64 idxID = 1;
}

// 更新
message UpdateContentReq {
  int64  idxID = 1;
  Content content = 2;
}

message UpdateContentRsp {}

// 删除
message DeleteContentReq {
  int64 IdxID = 1;
}

message DeleteContentRsp {}

// 查找
message FindContentReq {
  int64 IdxID = 1;
  string title = 2;
  string author = 3;
  int64 page = 4;
  int64 pageSize = 5;
}

message FindContentRsp {
  repeated Content content = 1;
}